# mycelium

./: ARCHITECTURE.md  CONTRIBUTING.md  CROSSDEVICE.md  Cargo.toml  Dockerfile  Dockerfile.signaling  GOVERNANCE.md  NEWS.md  PERFORMANCE.md  PHILOSOPHY.md  README.md  ROADMAP.md  SCALING.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  install.sh  mycelium_web.d.ts  nginx.conf
.github/workflows/: ci-cd.yml  ci.yml
crates/mycelium-compute/: Cargo.toml
crates/mycelium-compute/src/: expert_replication.rs  lib.rs
crates/mycelium-core/src/: lib.rs
crates/mycelium-fruit/: Cargo.toml
crates/mycelium-fruit/src/: lib.rs
crates/mycelium-hyphae/: Cargo.toml
crates/mycelium-hyphae/src/: lib.rs
crates/mycelium-node/src/: ios_bridge.rs  main.rs
crates/mycelium-nucleus/src/: lib.rs
crates/mycelium-signaling/: Cargo.toml
crates/mycelium-signaling/src/: main.rs
crates/mycelium-spore/: Cargo.toml
crates/mycelium-spore/src/: lib.rs
crates/mycelium-substrate/: Cargo.toml
crates/mycelium-substrate/src/: lib.rs
crates/mycelium-vulkan/: Cargo.toml
crates/mycelium-vulkan/src/: lib.rs
crates/mycelium-web/: Cargo.toml
crates/mycelium-web/src/: lib.rs  webrtc.rs
docs/: README.md  index.html  mycelium_web.js  mycelium_web_bg.wasm  mycelium_web_bg.wasm.d.ts  package.json  wiki.html
ios/MyceliumBridge/: MyceliumBridge-Info.plist  MyceliumBridge.swift
mycelium-core/: Cargo.toml
mycelium-core/src/: lib.rs
mycelium-node/: Cargo.toml
mycelium-node/src/: main.rs
mycelium-nucleus/: Cargo.toml
mycelium-nucleus/src/: lib.rs
mycelium-spore/src/: lib.rs
mycelium-substrate/: Cargo.toml
mycelium-substrate/src/: lib.rs
mycelium-web/: Cargo.toml
mycelium-web/src/: lib.rs
shaders/: attention.wgsl  latent_ops.wgsl  matmul.wgsl
tests/: pipeline_parallel.rs
wasm/: index.html
wasm/mycelium-web/: Cargo.toml
wasm/pkg/: mycelium_web.wasm
web/: index.html  install.sh
