[package]
name = "mycelium-nucleus"
version.workspace = true
edition.workspace = true

[dependencies]
mycelium-core = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
