[package]
name = "mycelium-compute"
version.workspace = true
edition.workspace = true

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
wasm = ["wgpu/webgl"]

[dependencies]
mycelium-core = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
half = "2"
tokenizers = "0.21"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
