[package]
name = "mycelium-spore"
version.workspace = true
edition.workspace = true

[dependencies]
mycelium-core = { workspace = true }
mycelium-substrate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
zstd = "0.13"
rand = "0.8"
crc32fast = "1.4"
