[package]
name = "mycelium-substrate"
version.workspace = true
edition.workspace = true

[dependencies]
mycelium-core = { workspace = true }
candle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
memmap2 = "0.9"
