[package]
name = "mycelium-vulkan"
version.workspace = true
edition.workspace = true
description = "Vulkan GPU compute backend for Mycelium via wgpu"

[dependencies]
mycelium-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
half = "2"
pollster = "0.3"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
